Codestyle: generics, deprecated methods removed, maven config fixed